# nuprism

./: LICENSE  README.md  pyproject.toml
src/nuprism/: __init__.py  __main__.py
