[project]
name = "nuprism-ctl"
description = "Package for NuPRISM Diagnostics"
version = "1.0.14"
authors = [
    { name = "Bryerton Shaw", email = "bryerton@triumf.ca" }
]
readme.file = "README.md"
readme.content-type = "text/markdown"
license.file = "LICENSE"
dependencies = [
    "argparse",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "tox"
]

[project.scripts]
nuprism-ctl = "nuprism.__main__:main"

[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest
"""